syntax = "proto3";

package ingestion_consumer;

option go_package = "github.com/razvanmarinn/ingestion_consumer/proto";

service MasterService {
    rpc RegisterFile(ClientFileRequestToMaster) returns (MasterFileResponse);
    rpc GetBatchDestination(ClientBatchRequestToMaster) returns (MasterResponse);

}

service WorkerService {
    rpc StoreBatchAvro(AvroBatchRequest) returns (WorkerResponse); 
}
message MasterResponse {
    string worker_ip = 1;
    int32 worker_port = 2;
}


message ClientFileRequestToMaster {
    string fileName = 1;          
    int32 hash = 2;               
    int64 fileSize = 3;           
    Batches batchInfo = 4;        
}

message ClientBatchRequestToMaster {
    string batch_id = 1;
    int32 batch_size = 2;
}

message WorkerResponse {
    bool success = 1;
}


message AvroBatchRequest {
    string batch_id = 1;
    bytes avro_data = 2; 
}

message Batch {
    string uuid = 1;
    int32 size = 2;  
}

message Batches {
    repeated Batch batches = 1; 
}

message MasterFileResponse {
    bool success = 1; 
}
